fix(design): align header-tabs to the right

--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -95,6 +95,7 @@
     .header-tabs {
       display: block;
       align-self: flex-end;
+      margin-left: auto;
 
       @media (min-width: $viewport-md) {
         display: inline-block;
